styling and projects

--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
         </ul>
       </nav><!-- .nav-menu -->
     </div>
-  </header><!-- End Header -->
+  </header>
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Eric Russell</h1>
     </div>
-  </section><!-- End Hero -->
+  </section>
 
   <main id="main">
 
@@ -105,7 +105,7 @@
         </div>
 
       </div>
-    </section><!-- End About Section -->
+    </section>
 
 
     <!-- ======= Skills Section ======= -->
@@ -116,35 +116,36 @@
           <h2>My Skills</h2>
         </div>
 
-        <div class="row skills-content">
-          <div class="col-lg-3 col-md-6">
-            <img class="img-fluid skills-img" src="assets/img/Logo/HTML5_badge.png" alt="HTML5 logo">
+        <div class="row skills-content justify-content-center">
+          <div class="col-lg-3 col-md-6 skills-img m-4">
+            <img class="img-fluid" src="assets/img/Logo/HTML5_badge.png" alt="HTML5 logo">
           </div>
-          <div class="col-lg-3 col-md-6">
-            <img class="img-fluid skills-img" src="assets/img/Logo/css3-logo-png-transparent.png" alt="CSS3 logo">
+          <div class="col-lg-3 col-md-6 skills-img m-4">
+            <img class="img-fluid" src="assets/img/Logo/css3-logo-png-transparent.png" alt="CSS3 logo">
           </div>
-          <div class="col-lg-3 col-md-6">
-            <img class="img-fluid skills-img" src="assets/img/Logo/javascript.png" alt="javascript logo">
+          <div class="col-lg-3 col-md-6 skills-img m-4">
+            <img class="img-fluid" src="assets/img/Logo/javascript.png" alt="javascript logo">
           </div>
-          <div class="col-lg-3 col-md-6">
-            <img class="img-fluid skills-img" src="assets/img/Logo/vue.png" alt="vue javascript logo">
+          <div class="col-lg-3 col-md-6 skills-img m-4">
+            <img class="img-fluid" src="assets/img/Logo/vue.png" alt="vue javascript logo">
           </div>
-          <div class="col-lg-3 col-md-6">
-            <img class="img-fluid skills-img" src="assets/img/Logo/c-sharp.png" alt="C sharp logo">
+          <div class="col-lg-3 col-md-6 skills-img m-4">
+            <img class="img-fluid" src="assets/img/Logo/c-sharp.png" alt="C sharp logo">
           </div>
-          <div class="col-lg-3 col-md-6">
-            <img class="img-fluid skills-img" src="assets/img/Logo/dotnet.png" alt="dot net logo">
+          <div class="col-lg-3 col-md-6 skills-img m-4 text-center text-primary">
+            <img class="img-fluid" src="assets/img/Logo/dotnet.png" alt="dot net logo">
+            <h3>DotNet</h3>
           </div>
-          <div class="col-lg-3 col-md-6">
-            <img class="img-fluid skills-img" src="assets/img/Logo/node.png" alt="node javascript logo">
+          <div class="col-lg-3 col-md-6 skills-img m-4">
+            <img class="img-fluid" src="assets/img/Logo/node.png" alt="node javascript logo">
           </div>
-          <div class="col-lg-3 col-md-6">
-            <img class="img-fluid skills-img" src="assets/img/Logo/mysql.png" alt="my SQL logo">
+          <div class="col-lg-3 col-md-6 skills-img m-4">
+            <img class="img-fluid" src="assets/img/Logo/mysql.png" alt="my SQL logo">
           </div>
         </div>
 
       </div>
-    </section><!-- End Skills Section -->
+    </section>
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
@@ -154,114 +155,33 @@
           <h2>My Work</h2>
         </div>
 
-        <div class="row" data-aos="fade-up">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Static</li>
-              <li data-filter=".filter-card">Full-Stack</li>
-              <li data-filter=".filter-web">Team Projects</li>
-            </ul>
-          </div>
-        </div>
-
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+          <a href="https://towerevents.onrender.com" target="_blank">
+            <div class="col-lg-3 col-md-6 portfolio-item d-flex">
+              <div class="portfolio-wrap tower section-bg">
+                <img src="assets/img/Logo/Tower.png" class="img-fluid portfolio-img p-3" alt="">
+                <div class="portfolio-links">
+                  <h6 class="fs-5 px-3">Tower Events Full-Stack Application</h6>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <div class="col-lg-3 col-md-6 portfolio-item d-flex">
+            <div class="portfolio-wrap keepr section-bg">
+              <img src="assets/img/Logo/KeeprLogo.png" class="img-fluid portfolio-img p-3" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <h6>Keepr Full-Stack Application</h6>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+          <div class="col-lg-3 col-md-6 portfolio-item  d-flex">
+            <div class="portfolio-wrap network section-bg">
+              <img src="assets/img/Logo/Network.png" class="img-fluid portfolio-img-network p-3" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <h6>The Network Vue.js</h6>
               </div>
             </div>
           </div>
@@ -277,47 +197,57 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Always looking for opportunity please feel free to contact me and I will get back to you as soon as I can.
+          <p>Always looking for opportunity please feel free to contact me and I will get back to you as soon as
+            possible.
           </p>
         </div>
 
-        <div class="row" data-aos="fade-in">
+        <div class="row justify-content-between" data-aos="fade-in">
 
           <div class="address col-lg-2 col-md-3">
-            <i class="bi bi-geo-alt"></i>
+            <i class="bi bi-geo-alt fs-1"></i>
             <h4>Location:</h4>
             <p>Meridian, Idaho</p>
           </div>
 
           <div class="email col-lg-2 col-md-3">
-            <i class="bi bi-envelope"></i>
+            <i class="bi bi-envelope fs-1"></i>
             <h4>Email:</h4>
-            <p>EricTim.Russell@live.com</p>
+            <a href="mailto:EricTim.Russell@live.com">
+              <p>EricTim.Russell@live.com</p>
+            </a>
           </div>
 
           <div class="phone col-lg-2 col-md-3">
-            <i class="bi bi-phone"></i>
+            <i class="bi bi-phone fs-1"></i>
             <h4>Phone:</h4>
             <p>208-318-4568</p>
           </div>
 
           <div class="col-lg-2 col-md-3">
-            <a href="https://github.com/EricTimRussell" target="_blank" title="GitHub"><i class="bx bxl-github"></i></a>
+            <a href="https://github.com/EricTimRussell" target="_blank" title="GitHub"><i
+                class="bx bxl-github fs-1"></i></a>
             <h4>GitHub Profile</h4>
+            <a href="https://github.com/EricTimRussell" target="_blank">
+              <p>https://github.com/EricTimRussell</p>
+            </a>
           </div>
 
           <div class="col-lg-2 col-md-3">
             <a href="https://www.linkedin.com/in/eric-tim-russell/" target="_blank" title="Linkedin" class="linkedin"><i
-                class="bx bxl-linkedin"></i></a>
+                class="bx bxl-linkedin fs-1"></i></a>
             <h4>Linkedin Profile</h4>
+            <a href="https://www.linkedin.com/in/eric-tim-russell/" target="_blank">
+              <p>https://www.linkedin.com/in/eric-tim-russell/</p>
+            </a>
           </div>
 
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section>
 
-  </main><!-- End #main -->
+  </main>
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
@@ -333,7 +263,7 @@
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
-  </footer><!-- End  Footer -->
+  </footer>
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
