--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
-      <div class="container">
+      <div class="container" data-aos="fade-in" data-aos-delay="100">
 
         <div class="section-title mb-3">
           <h2>My Skills</h2>
@@ -172,7 +172,7 @@
             <div class="portfolio-wrap keepr section-bg">
               <img src="assets/img/Logo/KeeprLogo.png" class="img-fluid portfolio-img p-3" alt="">
               <div class="portfolio-links">
-                <h6>Keepr Full-Stack Application</h6>
+                <h6 class="fs-5 px-3">Keepr Full-Stack Application</h6>
               </div>
             </div>
           </div>
@@ -181,7 +181,7 @@
             <div class="portfolio-wrap network section-bg">
               <img src="assets/img/Logo/Network.png" class="img-fluid portfolio-img-network p-3" alt="">
               <div class="portfolio-links">
-                <h6>The Network Vue.js</h6>
+                <h6 class="fs-5 px-3">The Network Vue.js</h6>
               </div>
             </div>
           </div>
