Styling and images

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>Eric-Russell-LP</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -47,7 +47,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="Eric Russell software developer" class="img-fluid rounded-circle">
+        <img src="assets/img/Eric.jpg" alt="Eric Russell software developer" class="rounded">
         <h1 class="text-light"><a href="index.html">Eric Russell</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/EricTimRussell" target="_blank" title="GitHub"><i class="bx bxl-github"></i></a>
@@ -73,7 +73,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Eric Russell</h1>
+      <h1 class="">Eric Russell</h1>
     </div>
   </section>
 
@@ -89,8 +89,9 @@
         </div>
 
         <div class="row">
-          <div class="col-sm-12 col-lg-5 mb-4 d-flex justify-content-center" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid rounded" alt="Eric Russell software developer">
+          <div class="col-sm-12 col-lg-5 mb-4 d-flex justify-content-center flex-column" data-aos="fade-right">
+            <img src="./assets/img/Eric.jpg" class="img-fluid rounded" alt="Eric Russell software developer">
+            <p>Temporary image</p>
           </div>
           <div class="col-sm-12 col-lg-6">
             <p class="fs-5">
@@ -189,7 +190,7 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact section-bg">
