--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1 class="">Eric Russell</h1>
+      <h1 class="hero-title">Full-stack Developer</h1>
     </div>
   </section>
 
@@ -98,8 +99,8 @@
               after graduating I learned that the world of law enforcement was not for me. I found myself working in the
               logistics industry for 5 years, but it was not a fulfilling career path. I found software development from
               a simple Udemy course on javascript and after that I knew it was what I wanted to pursue. After a grueling
-              13-week software development bootcamp I have gained the confidence and skills needed to be pursue my
-              developer goals.
+              13-week software development bootcamp with CodeWorks Boise, I have gained the confidence and skills needed
+              to be pursue my developer goals.
             </p>
           </div>
         </div>
@@ -157,16 +158,14 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <a href="https://towerevents.onrender.com" target="_blank">
-            <div class="col-lg-3 col-md-6 portfolio-item d-flex">
-              <div class="portfolio-wrap tower section-bg">
-                <img src="assets/img/Logo/Tower.png" class="img-fluid portfolio-img p-3" alt="">
-                <div class="portfolio-links">
-                  <h6 class="fs-5 px-3">Tower Events Full-Stack Application</h6>
-                </div>
+          <div class="col-lg-3 col-md-6 portfolio-item d-flex">
+            <div class="portfolio-wrap tower section-bg">
+              <img src="assets/img/Logo/Tower.png" class="img-fluid portfolio-img p-3" alt="">
+              <div class="portfolio-links">
+                <h6 class="fs-5 px-3">Tower Events Full-Stack Application</h6>
               </div>
             </div>
-          </a>
+          </div>
 
           <div class="col-lg-3 col-md-6 portfolio-item d-flex">
             <div class="portfolio-wrap keepr section-bg">
@@ -186,6 +185,13 @@
             </div>
           </div>
 
+          <div class="col-lg-3 col-md-6 portfolio-item d-flex">
+            <div class="portfolio-wrap riskier section-bg">
+              <div class="portfolio-links">
+                <h6 class="fs-5 px-3">Riskier Full-Stack Application</h6>
+              </div>
+            </div>
+          </div>
         </div>
 
       </div>
@@ -197,14 +203,11 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Always looking for opportunity please feel free to contact me and I will get back to you as soon as
-            possible.
-          </p>
         </div>
 
-        <div class="row justify-content-between" data-aos="fade-in">
+        <div class="row justify-content-around" data-aos="fade-in">
 
-          <div class="address col-lg-2 col-md-3">
+          <div class="address col-lg-1 col-md-3">
             <i class="bi bi-geo-alt fs-1"></i>
             <h4>Location:</h4>
             <p>Meridian, Idaho</p>
@@ -218,13 +221,13 @@
             </a>
           </div>
 
-          <div class="phone col-lg-2 col-md-3">
+          <div class="phone col-lg-1 col-md-2">
             <i class="bi bi-phone fs-1"></i>
             <h4>Phone:</h4>
-            <p>208-318-4568</p>
+            <p>(208)<br>318-4568</p>
           </div>
 
-          <div class="col-lg-2 col-md-3">
+          <div class="col-lg-2 col-md-4">
             <a href="https://github.com/EricTimRussell" target="_blank" title="GitHub"><i
                 class="bx bxl-github fs-1"></i></a>
             <h4>GitHub Profile</h4>
@@ -233,7 +236,7 @@
             </a>
           </div>
 
-          <div class="col-lg-2 col-md-3">
+          <div class="col-lg-3 col-md-3">
             <a href="https://www.linkedin.com/in/eric-tim-russell/" target="_blank" title="Linkedin" class="linkedin"><i
                 class="bx bxl-linkedin fs-1"></i></a>
             <h4>Linkedin Profile</h4>
