picture update/ mobile styling changes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/Eric.jpg" alt="Eric Russell software developer" class="rounded">
+        <img src="assets/img/EricBnW (3).JPG" alt="Eric Russell software developer" class="rounded">
         <h1 class="text-light"><a href="index.html">Eric Russell</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/EricTimRussell" target="_blank" title="GitHub"><i class="bx bxl-github"></i></a>
@@ -73,7 +73,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1 class="">Eric Russell</h1>
+      <h1>Eric Russell</h1>
       <h1 class="hero-title">Full-stack Developer</h1>
     </div>
   </section>
@@ -91,7 +91,7 @@
 
         <div class="row">
           <div class="col-sm-12 col-lg-5 mb-4 d-flex justify-content-center flex-column" data-aos="fade-right">
-            <img src="./assets/img/Eric.jpg" class="img-fluid rounded" alt="Eric Russell software developer">
+            <img src="./assets/img/EricBnW (3).JPG" class="img-fluid rounded" alt="Eric Russell software developer">
           </div>
           <div class="col-sm-12 col-lg-6">
             <p class="fs-5">
@@ -118,29 +118,30 @@
         </div>
 
         <div class="row skills-content justify-content-center">
-          <div class="col-lg-3 col-md-6 skills-img m-4">
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img m-4">
             <img class="img-fluid" src="assets/img/Logo/HTML5_badge.png" alt="HTML5 logo">
           </div>
-          <div class="col-lg-3 col-md-6 skills-img m-4">
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img m-4">
             <img class="img-fluid" src="assets/img/Logo/css3-logo-png-transparent.png" alt="CSS3 logo">
           </div>
-          <div class="col-lg-3 col-md-6 skills-img m-4">
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img m-4">
             <img class="img-fluid" src="assets/img/Logo/javascript.png" alt="javascript logo">
           </div>
-          <div class="col-lg-3 col-md-6 skills-img m-4">
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img m-4">
             <img class="img-fluid" src="assets/img/Logo/vue.png" alt="vue javascript logo">
           </div>
-          <div class="col-lg-3 col-md-6 skills-img m-4">
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img m-4">
             <img class="img-fluid" src="assets/img/Logo/c-sharp.png" alt="C sharp logo">
           </div>
-          <div class="col-lg-3 col-md-6 skills-img m-4 text-center text-primary">
+          <div
+            class="col-lg-3 col-md-6 col-sm-12 skills-img m-4 text-center text-primary d-flex flex-column justify-content-center">
             <img class="img-fluid" src="assets/img/Logo/dotnet.png" alt="dot net logo">
             <h3>DotNet</h3>
           </div>
-          <div class="col-lg-3 col-md-6 skills-img m-4">
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img m-4">
             <img class="img-fluid" src="assets/img/Logo/node.png" alt="node javascript logo">
           </div>
-          <div class="col-lg-3 col-md-6 skills-img m-4">
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img m-4">
             <img class="img-fluid" src="assets/img/Logo/mysql.png" alt="my SQL logo">
           </div>
         </div>
@@ -156,18 +157,19 @@
           <h2>My Work</h2>
         </div>
 
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+        <div class="row" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-3 col-md-6 portfolio-item d-flex">
+          <div class="col-lg-3 col-md-6 portfolio-item d-flex justify-content-center">
             <div class="portfolio-wrap tower section-bg">
               <img src="assets/img/Logo/Tower.png" class="img-fluid portfolio-img p-3" alt="">
               <div class="portfolio-links">
-                <h6 class="fs-5 px-3">Tower Events Full-Stack Application</h6>
+                <button class="fs-5 px-3" data-bs-toggle="modal" data-bs-target="#exampleModal">Tower Events Full-Stack
+                  Application</button>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item d-flex">
+          <div class="col-lg-3 col-md-6 portfolio-item d-flex justify-content-center">
             <div class="portfolio-wrap keepr section-bg">
               <img src="assets/img/Logo/KeeprLogo.png" class="img-fluid portfolio-img p-3" alt="">
               <div class="portfolio-links">
@@ -176,7 +178,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item  d-flex">
+          <div class="col-lg-3 col-md-6 portfolio-item  d-flex justify-content-center">
             <div class="portfolio-wrap network section-bg">
               <img src="assets/img/Logo/Network.png" class="img-fluid portfolio-img-network p-3" alt="">
               <div class="portfolio-links">
@@ -185,7 +187,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item d-flex">
+          <div class="col-lg-3 col-md-6 portfolio-item d-flex justify-content-center">
             <div class="portfolio-wrap riskier section-bg">
               <div class="portfolio-links">
                 <h6 class="fs-5 px-3">Riskier Full-Stack Application</h6>
@@ -286,5 +288,27 @@
   <script src="assets/js/main.js"></script>
 
 </body>
+
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Application Title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Application Description</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 </html>
