--- a/index.html
+++ b/index.html
@@ -160,40 +160,47 @@
         <div class="row" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-3 col-md-6 portfolio-item d-flex justify-content-center">
-            <div class="portfolio-wrap tower section-bg">
-              <img src="assets/img/Logo/Tower.png" class="img-fluid portfolio-img p-3" alt="">
-              <div class="portfolio-links">
-                <button class="fs-5 px-3" data-bs-toggle="modal" data-bs-target="#exampleModal">Tower Events Full-Stack
-                  Application</button>
+            <a href="https://github.com/EricTimRussell/Tower" target="_blank">
+              <div class="portfolio-wrap tower section-bg">
+                <img src="assets/img/Logo/Tower.png" class="img-fluid portfolio-img p-3" alt="">
+                <div class="portfolio-links">
+                  <h6 class="fs-5 px-3">Tower Events Full-Stack Application</h6>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
 
           <div class="col-lg-3 col-md-6 portfolio-item d-flex justify-content-center">
-            <div class="portfolio-wrap keepr section-bg">
-              <img src="assets/img/Logo/KeeprLogo.png" class="img-fluid portfolio-img p-3" alt="">
-              <div class="portfolio-links">
-                <h6 class="fs-5 px-3">Keepr Full-Stack Application</h6>
+            <a href="https://github.com/EricTimRussell/Keeper" target="_blank">
+              <div class="portfolio-wrap keepr section-bg">
+                <img src="assets/img/Logo/KeeprLogo.png" class="img-fluid portfolio-img p-3" alt="">
+                <div class="portfolio-links">
+                  <h6 class="fs-5 px-3">Keepr Full-Stack Application</h6>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
 
           <div class="col-lg-3 col-md-6 portfolio-item  d-flex justify-content-center">
-            <div class="portfolio-wrap network section-bg">
-              <img src="assets/img/Logo/Network.png" class="img-fluid portfolio-img-network p-3" alt="">
-              <div class="portfolio-links">
-                <h6 class="fs-5 px-3">The Network Vue.js</h6>
+            <a href="https://github.com/EricTimRussell/Smedia" target="_blank">
+              <div class="portfolio-wrap network section-bg">
+                <img src="assets/img/Logo/Network.png" class="img-fluid portfolio-img-network p-3" alt="">
+                <div class="portfolio-links">
+                  <h6 class="fs-5 px-3">The Network Vue.js</h6>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
 
           <div class="col-lg-3 col-md-6 portfolio-item d-flex justify-content-center">
-            <div class="portfolio-wrap riskier section-bg">
-              <div class="portfolio-links">
-                <h6 class="fs-5 px-3">Riskier Full-Stack Application</h6>
+            <a href="https://github.com/EricTimRussell/riskier" target="_blank">
+              <div class="portfolio-wrap riskier section-bg">
+                <div class="portfolio-links">
+                  <h6 class="fs-5 px-3">Riskier Full-Stack Application</h6>
+                </div>
               </div>
-            </div>
           </div>
+          </a>
         </div>
 
       </div>
@@ -288,27 +295,5 @@
   <script src="assets/js/main.js"></script>
 
 </body>
-
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Application Title</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <p>Application Description</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
 
 </html>
