small style changes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/EricBnW (3).JPG" alt="Eric Russell software developer" class="rounded">
+        <img src="assets/img/EricBnW (3).JPG" alt="Eric Russell software developer" class="profile">
         <h1 class="text-light"><a href="index.html">Eric Russell</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/EricTimRussell" target="_blank" title="GitHub"><i class="bx bxl-github"></i></a>
