--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               logistics industry for 5 years, but it was not a fulfilling career path. I found software development from
               a simple Udemy course on javascript and after that I knew it was what I wanted to pursue. After a grueling
               13-week software development bootcamp with CodeWorks Boise, I have gained the confidence and skills needed
-              to be pursue my developer goals.
+              to pursue my developer goals.
             </p>
           </div>
         </div>
