--- a/index.html
+++ b/index.html
@@ -118,19 +118,25 @@
         </div>
 
         <div class="row skills-content justify-content-center">
-          <div class="col-lg-3 col-md-6 col-sm-12 skills-img m-4">
-            <img class="img-fluid" src="assets/img/Logo/HTML5_badge.png" alt="HTML5 logo">
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 skills-img m-4">
-            <img class="img-fluid" src="assets/img/Logo/css3-logo-png-transparent.png" alt="CSS3 logo">
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img">
+            <img title="HTML5" class="img-fluid" src="assets/img/Logo/HTML5_badge.png" alt="HTML5 logo">
           </div>
           <div class="col-lg-3 col-md-6 col-sm-12 skills-img m-4">
             <img class="img-fluid" src="assets/img/Logo/javascript.png" alt="javascript logo">
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 skills-img m-4">
-            <img class="img-fluid" src="assets/img/Logo/vue.png" alt="vue javascript logo">
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img">
+            <img class="img-fluid" src="assets/img/Logo/bootstrap.png" alt="BootStrap logo">
           </div>
           <div class="col-lg-3 col-md-6 col-sm-12 skills-img m-4">
+            <img class="img-fluid" src="assets/img/Logo/tailwind.png" alt="Tailwind logo">
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img">
+            <img title="VueJs" class="img-fluid" src="assets/img/Logo/vue.png" alt="vue javascript logo">
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img m-4">
+            <img class="img-fluid nuxt" src="assets/img/Logo/Nuxt3.png" alt="Nuxt logo">
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img">
             <img class="img-fluid" src="assets/img/Logo/c-sharp.png" alt="C sharp logo">
           </div>
           <div
@@ -138,7 +144,7 @@
             <img class="img-fluid" src="assets/img/Logo/dotnet.png" alt="dot net logo">
             <h3>DotNet</h3>
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 skills-img m-4">
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img">
             <img class="img-fluid" src="assets/img/Logo/node.png" alt="node javascript logo">
           </div>
           <div class="col-lg-3 col-md-6 col-sm-12 skills-img m-4">
