skills img update

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class="section-title">
           <h2>A Little About Me</h2>
-          <h5>I am a full-stack developer with a particular love for C# and caffeine.</h5>
+          <h5>I am a full-stack developer with a particular love for Vuejs and caffeine.</h5>
         </div>
 
         <div class="row">
@@ -97,7 +97,8 @@
             <p class="fs-5">
               My career life began when I graduated from Boise State University with a BS in criminal justice. Shortly
               after graduating I learned that the world of law enforcement was not for me. I found myself working in the
-              logistics industry for 5 years, but it was not a fulfilling career path. I found software development from
+              logistics industry for 5 years, but it was not a fulfilling career path. I discoverd software development
+              from
               a simple Udemy course on javascript and after that I knew it was what I wanted to pursue. After a grueling
               13-week software development bootcamp with CodeWorks Boise, I have gained the confidence and skills needed
               to pursue my developer goals.
@@ -117,38 +118,38 @@
           <h2>My Skills</h2>
         </div>
 
-        <div class="row skills-content justify-content-center">
-          <div class="col-lg-3 col-md-6 col-sm-12 skills-img">
-            <img title="HTML5" class="img-fluid" src="assets/img/Logo/HTML5_badge.png" alt="HTML5 logo">
+        <div class="row justify-content-center">
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img p-5">
+            <img title="Javascript" class="img-fluid" src="assets/img/Logo/javascript.png" alt="javascript logo">
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 skills-img m-4">
-            <img class="img-fluid" src="assets/img/Logo/javascript.png" alt="javascript logo">
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img p-5">
+            <img title="Bootstrap" class="img-fluid" src="assets/img/Logo/bootstrap.png" alt="BootStrap logo">
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 skills-img">
-            <img class="img-fluid" src="assets/img/Logo/bootstrap.png" alt="BootStrap logo">
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img p-5">
+            <img title="Tailwind" class="img-fluid" src="assets/img/Logo/tailwind.png" alt="Tailwind logo">
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 skills-img m-4">
-            <img class="img-fluid" src="assets/img/Logo/tailwind.png" alt="Tailwind logo">
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 skills-img">
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img p-5">
             <img title="VueJs" class="img-fluid" src="assets/img/Logo/vue.png" alt="vue javascript logo">
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 skills-img m-4">
-            <img class="img-fluid nuxt" src="assets/img/Logo/Nuxt3.png" alt="Nuxt logo">
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img p-5">
+            <img title="Nuxtjs" class="nuxt" src="assets/img/Logo/Nuxt3.png" alt="Nuxt logo">
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 skills-img">
-            <img class="img-fluid" src="assets/img/Logo/c-sharp.png" alt="C sharp logo">
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img p-5">
+            <img title="CSharp" class="img-fluid" src="assets/img/Logo/c-sharp.png" alt="C sharp logo">
           </div>
           <div
-            class="col-lg-3 col-md-6 col-sm-12 skills-img m-4 text-center text-primary d-flex flex-column justify-content-center">
-            <img class="img-fluid" src="assets/img/Logo/dotnet.png" alt="dot net logo">
+            class="col-lg-3 col-md-6 col-sm-12 skills-img text-center text-primary d-flex flex-column justify-content-center p-5">
+            <img title="DotNet" class="img-fluid" src="assets/img/Logo/dotnet.png" alt="dot net logo">
             <h3>DotNet</h3>
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 skills-img">
-            <img class="img-fluid" src="assets/img/Logo/node.png" alt="node javascript logo">
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img p-5">
+            <img title="MySQL" class="img-fluid" src="assets/img/Logo/mysql.png" alt="my SQL logo">
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 skills-img m-4">
-            <img class="img-fluid" src="assets/img/Logo/mysql.png" alt="my SQL logo">
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img p-5">
+            <img title="Nodejs" class="img-fluid" src="assets/img/Logo/node.png" alt="node javascript logo">
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-12 skills-img p-5">
+            <img title="Google Firebase" class="img-fluid" src="assets/img/Logo/firebase_logo.png" alt="firebase logo">
           </div>
         </div>
 
